--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pyasn1_modules==0.4.2
 pydantic==2.11.2
 pydantic_core==2.33.1
 pyparsing==3.2.3
+RapidFuzz==3.13.0
 requests==2.32.3
 rsa==4.9
 tqdm==4.67.1
@@ -27,3 +28,4 @@ typing-inspection==0.4.0
 typing_extensions==4.13.1
 uritemplate==4.1.1
 urllib3==2.3.0
+pytest
